--- a/Web/Views/Registro/Registro.cshtml
+++ b/Web/Views/Registro/Registro.cshtml
@@ -1,13 +1,8 @@
+@using Web.Entidades;
 @model Usuario;
 
 @{
     ViewData["Title"] = "AgregarUsuario";
-}
-
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
     Layout = null;
 }
 <!DOCTYPE html>
@@ -25,40 +20,28 @@
 </head>
 <body class="bg-info d-flex justify-content-center align-items-center vh-100">
     <form action="/Registro/Agregar" method="post">
-    <div class="bg-white p-5 rounded-5 text-secondary shadow"
-         style="width: 25rem">
-        
-        <div class="text-center fs-1 fw-bold">Registro</div>
-            <div class="form-group mt-4">
-                <label for="staticEmail" class="form-label mt-4 text-primary">Email</label>
-                <input class="form-control bg-light"
-                       type="email"
-                       placeholder="Introduzca su correo electrónico" 
-                       asp-for="@Model.Email"
-                       value="@Model.Email"
-                       name="Email" 
-                       id="Email"
-                       />
-            </div>
+        <div class="bg-white p-5 rounded-5 text-secondary shadow"
+             style="width: 25rem">
 
-        <div class="form-group mt-4">
+            <div class="form-group mt-4">
                 <label for="Username" class="form-label mt-4 text-primary">Usuario</label>
-            <input class="form-control bg-light"
-                   type="text"
-                       placeholder="Introduzca su usuario" asp-for="@Model.Username" value="@Model.Username" name="Username" id="Username" />
-        </div>
-        <div class="form-group mt-4">
+                <span asp-validation-for="Username" class="text-danger"></span>
+                <input class="form-control bg-light"
+                       type="text" placeholder="Introduzca su usuario" asp-for="@Model.Username" value="@Model.Username" name="Username" id="Username" />
+            </div>
+            <div class="form-group mt-4">
                 <label for="exampleInputPassword1" class="form-label mt-4 text-primary">Password</label>
-            <input class="form-control bg-light"
-                   type="password"
-                       placeholder="Introduzca su clave" asp-for="@Model.Password" value="@Model.Password" name="Password" id="Password"/>
-        </div>
-        <br>
+                <span asp-validation-for="Password" class="text-danger"></span>
+                <input class="form-control bg-light"
+                       type="password"
+                       placeholder="Introduzca su clave" asp-for="@Model.Password" value="@Model.Password" name="Password" id="Password" />
+            </div>
+            <br>
             <button type="submit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> Registrar</button>
-       
-      
-       
-    </div>
+
+
+
+        </div>
     </form>
 </body>
 </html>
