--- a/Web/Views/Registro/Registro.cshtml
+++ b/Web/Views/Registro/Registro.cshtml
@@ -19,10 +19,13 @@
           crossorigin="anonymous" />
 </head>
 <body class="bg-info d-flex justify-content-center align-items-center vh-100">
-    <form action="/Registro/Agregar" method="post">
+    <form method="post">
         <div class="bg-white p-5 rounded-5 text-secondary shadow"
              style="width: 25rem">
-
+            @if (ViewBag.error != null)
+            {
+                <span class="text-danger">@ViewBag.error</span>
+            }
             <div class="form-group mt-4">
                 <label for="Username" class="form-label mt-4 text-primary">Usuario</label>
                 <span asp-validation-for="Username" class="text-danger"></span>
@@ -38,9 +41,6 @@
             </div>
             <br>
             <button type="submit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true"> Registrar</button>
-
-
-
         </div>
     </form>
 </body>
