fix de cookie + jwt & listado de usuarios

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -2,7 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
+
 <h1 class="display-4">Bienvenid@@</h1>
+
+@if (ViewBag.error != null)
+{
+    <span class="text-danger">@ViewBag.error</span>
+}
 <div style="width:90%;">
     <p>Este es un proyecto para el trabajo practico</p>
     <p>Pongame 10 profe</p>
