funcionalidad editar - VER

--- a/Web/Views/Home/ListadoUsuarios.cshtml
+++ b/Web/Views/Home/ListadoUsuarios.cshtml
@@ -7,9 +7,7 @@
 
 <h1>Listado Usuarios</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -43,7 +41,7 @@
                     </td>
                     <td>
                         <a class="btn btn-danger" href="/home/eliminar/@usuario.Id">Eliminar</a>
-                        <a class="btn btn-success" href="/home/editar/@usuario.Id">Editar</a>
+                        <a class="btn btn-success" href="/home/Editar/@usuario.Id">Editar</a>
                     </td>
                 </tr>
             }
