--- a/Web/Views/Login/Index.cshtml
+++ b/Web/Views/Login/Index.cshtml
@@ -79,7 +79,7 @@
             <img src="/assets/google-icon.svg"
                  alt="google-icon"
                  style="height: 1.6rem" />
-            <div class="fw-semibold text-secondary">Continue with Google</div>
+            <a href="Login/GoogleCallback"><div class="fw-semibold text-secondary">Continue with Google</div></a>
         </div>
     </div>
 </body>
