--- a/Web/Views/Home/Editar.cshtml
+++ b/Web/Views/Home/Editar.cshtml
@@ -1,16 +1,24 @@
-﻿
-@model Web.Entidades.UsuarioTemplate
+﻿@model Web.Entidades.UsuarioTemplate
 
 <h1>Editar</h1>
 
 <h4>Edición de Usuario</h4>
 <hr />
+@if (TempData.Peek("OkMsg") != null)
+{
+    <span class="text-danger">@TempData["OkMsg"]</span>
+}
+@if (TempData.Peek("error") != null)
+{
+    <span class="text-danger">@TempData["error"]</span>
+}
+
 <div class="row">
     <div class="col-md-4">
-        <form  action="/Home/Editar" method="post">
+        <form action="/Home/Editar" method="post">
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
-                <input  name="Id" class="form-control" readonly value="@Model.Id" />
+                <input name="Id" class="form-control" readonly value="@Model.Id" />
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,7 +36,7 @@
                     @foreach (var rol in ViewBag.ListaRoles)
                     {
                         <option value="@rol?.Id"
-                            selected="@(rolExistente != null && rolExistente == rol.Nombre ? "selected" : null)">
+                                selected="@(rolExistente != null && rolExistente == rol.Nombre ? "selected" : null)">
                             @rol?.Nombre
                         </option>
                     }
@@ -48,5 +56,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
