--- a/Web/Views/Home/ListadoUsuarios.cshtml
+++ b/Web/Views/Home/ListadoUsuarios.cshtml
@@ -6,12 +6,15 @@
 }
 
 <h1>Listado Usuarios</h1>
-@if (ViewBag.OkMsg != null)
-{
-    <span class="text-success">@ViewBag.OkMsg</span>
-}else if(ViewBag.error != null){
-        <span class="text-danger">@ViewBag.error</span>
+<hr />
 
+@if (TempData.Peek("OkMsg") != null)
+{
+    <span class="text-danger">@TempData["OkMsg"]</span>
+}
+@if (TempData.Peek("error") != null)
+{
+    <span class="text-danger">@TempData["error"]</span>
 }
 
 <table class="table">
@@ -36,14 +39,14 @@
             {
                 <tr>
                     <td>
-                      @usuario.Id
+                        @usuario.Id
                     </td>
                     <td>
-                      @usuario.Username
+                        @usuario.Username
                     </td>
                     <td>
                         @usuario.Rol
-                       
+
                     </td>
                     <td>
                         <a class="btn btn-danger" href="/home/Eliminar/@usuario.Id">Eliminar</a>
@@ -51,12 +54,14 @@
                     </td>
                 </tr>
             }
-        
-        }else{
-             <tr>
-                 <td><h5>No hay resultados de usuarios.</h5></td>
+
+        }
+        else
+        {
+            <tr>
+                <td><h5>No hay resultados de usuarios.</h5></td>
             </tr>
         }
-        
+
     </tbody>
 </table>
