--- a/Web/Views/Login/Index.cshtml
+++ b/Web/Views/Login/Index.cshtml
@@ -30,9 +30,13 @@
         <div class="text-center fs-1 fw-bold">Login</div>
         <form asp-action="Index">
             <span asp-validation-for="Username" class="text-danger"></span>
-            @if (ViewBag.error != null)
+            @if (TempData.Peek("OkMsg") != null)
             {
-                <span class="text-danger">@ViewBag.error</span>
+                <span class="text-success">@TempData["OkMsg"]</span>
+            }
+            @if (TempData.Peek("error") != null)
+            {
+                <span class="text-danger">@TempData["error"]</span>
             }
             <div class="input-group mt-4">
                 <div class="input-group-text bg-info">
