--- a/Web/Views/Shared/_menuUsuario.cshtml
+++ b/Web/Views/Shared/_menuUsuario.cshtml
@@ -15,7 +15,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Index">Volver al Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Registro" asp-action="Index">Volver al Registro</a>
+                            <a class="nav-link text-light" href="/Registro/Registro">Volver al Registro</a>
                         </li>
                     </ul>
                 </div>
