Cambiados algunos metodos a Get

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 @if (TempData.Peek("OkMsg") != null)
 {
-    <span class="text-danger">@TempData["OkMsg"]</span>
+    <span class="text-success">@TempData["OkMsg"]</span>
 }
 @if (TempData.Peek("error") != null)
 {
