--- a/Web/Views/Home/Editar.cshtml
+++ b/Web/Views/Home/Editar.cshtml
@@ -1,42 +1,40 @@
 ﻿@model Web.Entidades.UsuarioTemplate
 
-<h1>Editar</h1>
+<div class="container">
+    <h1>Editar</h1>
 
-<h4>Edición de Usuario</h4>
-<hr />
-@if (TempData.Peek("OkMsg") != null)
-{
-    <span class="text-danger">@TempData["OkMsg"]</span>
-}
-@if (TempData.Peek("error") != null)
-{
-    <span class="text-danger">@TempData["error"]</span>
-}
+    <h4>Edición de Usuario</h4>
+    <hr />
+    @if (TempData.Peek("OkMsg") != null)
+    {
+        <span class="text-success">@TempData["OkMsg"]</span>
+    }
+    @if (TempData.Peek("error") != null)
+    {
+        <span class="text-danger">@TempData["error"]</span>
+    }
 
-<div class="row">
-    <div class="col-md-4">
-        <form action="/Home/Editar" method="post">
+    <div class="col-md-8">
+        <form action="/Home/Editar" method="post" class="container">
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
+                <label asp-for="Id" class="form-label"></label>
                 <input name="Id" class="form-control" readonly value="@Model.Id" />
                 <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Username" class="control-label"></label>
+            
+                <label asp-for="Username" class="form-label"></label>
                 <input class="form-control" name="Username" value="@(Model != null ? Model.Username : null)" />
                 <span asp-validation-for="Username" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Rol" class="control-label">Rol</label>
-                <select id="Rol" name="Rol">
+                
+                <label asp-for="Rol" class="form-label">Rol</label>
+                <select id="IdRol" name="IdRol" class="form-control">
                     @{
-                        var rolExistente = Model.Rol as string;
+                        var rolActual = Model.Rol as string;
                     }
                     <option value="">-</option>
                     @foreach (var rol in ViewBag.ListaRoles)
                     {
                         <option value="@rol?.Id"
-                                selected="@(rolExistente != null && rolExistente == rol.Nombre ? "selected" : null)">
+                                selected="@(rolActual != null && rolActual == rol.Nombre ? "selected" : null)">
                             @rol?.Nombre
                         </option>
                     }
@@ -44,16 +42,14 @@
                 </select>
                 <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="m-3">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Volver al listado</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
