--- a/Web/Views/Home/ListadoUsuarios.cshtml
+++ b/Web/Views/Home/ListadoUsuarios.cshtml
@@ -4,63 +4,59 @@
 @{
     ViewData["Title"] = "ListadoUsuarios";
 }
+<div class="m-3">
+    <h1>Listado Usuarios</h1>
+    <hr />
 
-<h1>Listado Usuarios</h1>
-<hr />
+    @if (TempData.Peek("OkMsg") != null)
+    {
+        <span class="text-success">@TempData["OkMsg"]</span>
+    }
+    @if (TempData.Peek("error") != null)
+    {
+        <span class="text-danger">@TempData["error"]</span>
+    }
+</div>
+<div class="container">
+    <table class="table">
+        <thead class="table-dark">
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Nombre de usuario</th>
+                <th scope="col">Rol</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (Model.Count > 0)
+            {
+                @foreach (var usuario in Model)
+                {
+                    <tr>
+                        <th scope="row">
+                            @usuario.Id
+                        </th>
+                        <td>
+                            @usuario.Username
+                        </td>
+                        <td>
+                            @usuario.Rol
+                        </td>
+                        <td>
+                            <a class="btn btn-success" href="/home/Editar/@usuario.Id">Editar</a>
+                            <a class="btn btn-danger" href="/home/Eliminar/@usuario.Id">Eliminar</a>
+                        </td>
+                    </tr>
+                }
 
-@if (TempData.Peek("OkMsg") != null)
-{
-    <span class="text-success">@TempData["OkMsg"]</span>
-}
-@if (TempData.Peek("error") != null)
-{
-    <span class="text-danger">@TempData["error"]</span>
-}
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Id
-            </th>
-            <th>
-                Nombre de usuario
-            </th>
-            <th>
-                Rol
-            </th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.Count > 0)
-        {
-            @foreach (var usuario in Model)
+            }
+            else
             {
                 <tr>
-                    <td>
-                        @usuario.Id
-                    </td>
-                    <td>
-                        @usuario.Username
-                    </td>
-                    <td>
-                        @usuario.Rol
-                    </td>
-                    <td>
-                        <a class="btn btn-success" href="/home/Editar/@usuario.Id">Editar</a>
-                        <a class="btn btn-danger" href="/home/Eliminar/@usuario.Id">Eliminar</a>
-                    </td>
+                    <td><h5>No hay resultados de usuarios.</h5></td>
                 </tr>
             }
 
-        }
-        else
-        {
-            <tr>
-                <td><h5>No hay resultados de usuarios.</h5></td>
-            </tr>
-        }
-
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
