--- a/Web/Views/Registro/Registro.cshtml
+++ b/Web/Views/Registro/Registro.cshtml
@@ -31,13 +31,15 @@
                 <span class="text-danger">@TempData["error"]</span>
             }
             <div class="form-group mt-4">
-                <label for="Username" class="form-label mt-4 text-primary">Usuario</label>
+                <label for="Username" class="form-label mt-4 text-primary fw-bold ">Usuario</label>
+                <br />
                 <span asp-validation-for="Username" class="text-danger"></span>
                 <input class="form-control bg-light"
                        type="text" placeholder="Introduzca su usuario" asp-for="@Model.Username" value="@Model.Username" name="Username" id="Username" />
             </div>
             <div class="form-group mt-4">
-                <label for="exampleInputPassword1" class="form-label mt-4 text-primary">Password</label>
+                <label for="exampleInputPassword1" class="form-label mt-4 text-primary fw-bold">Password</label>
+                <br />
                 <span asp-validation-for="Password" class="text-danger"></span>
                 <input class="form-control bg-light"
                        type="password"
